src/components/common/Button/styles.scss
.button {
  --small-height: 1.8rem;
  --medium-height: 2.6rem;
  --large-height: 3.3rem;

  font-weight: 600;
  cursor: pointer;
  display: flex;
  align-items: center;
  border-radius: 5px;
  justify-content: center;

  transition: background-color 0.2s ease-in-out, opacity 0.1s;

  &:not(&--only-icon) {
    padding-inline: 1rem;
  }

  &--full {
    width: 100%;
  }

  &--primary {
    background-color: hsl(var(--accent-color));
    color: hsl(var(--white-color));
  }

  &--secondary {
    background-color: hsl(var(--gray-7-color));
    border: 1px solid hsl(var(--gray-5-color));
  }

  &--negative {
    background-color: hsl(var(--red-color));
    color: hsl(var(--white-color));
  }

  &[disabled] {
    cursor: default;
  }

  &--disabled {
    background-color: hsl(var(--gray-6-color));
    opacity: 0.6;
    color: hsl(var(--black-1-color));
    cursor: not-allowed !important;
  }

  &--size-small {
    font-size: var(--p5-font-size);
    line-height: var(--p5-line-height);
    height: var(--small-height);
  }

  &--size-medium {
    font-size: var(--p5-font-size);
    line-height: var(--p5-line-height);
    height: var(--medium-height);
  }

  &--size-large {
    font-size: var(--p3-font-size);
    line-height: var(--p3-line-height);
    height: var(--large-height);
  }

  $buttonRef: &;

  &--size-small {
    &#{$buttonRef}--only-icon {
      width: var(--small-height);
    }
  }

  &--size-medium {
    &#{$buttonRef}--only-icon {
      width: var(--medium-height);
    }
  }

  &--size-large {
    &#{$buttonRef}--only-icon {
      width: var(--large-height);
    }
  }

  &:hover,
  &:active {
    opacity: 0.8;
  }

  &__loader {
    position: absolute;
  }

  &__label {
    display: flex;
    align-items: center;
    column-gap: 7px;

    &--hidden {
      opacity: 0;
    }
  }

  &__count {
    border-radius: 50%;
    background-color: hsl(var(--accent-color));
    font-size: var(--p5-font-size);
    line-height: var(--p5-line-height);
    color: hsl(var(--white-color));
    display: inline-block;
    padding: 0 6px;
  }
}

